5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1650_651.log
== TEST (2019-04-14 18:46:26) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo==m.upper()):
	print(round(mulher,2))
else:
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo==m.upper()):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:46:32) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo==m.upper()):
	print(round(mulher,2))
else:
	print(round(machoescroto,2))
	

-- EXECUTION TIME:
0.127474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/651/main.py", line 5, in <module>
    if(sexo==m.upper()):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:46:40) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo==m.upper()):
	print(round(mulher,2))
else:
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo==m.upper()):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:48:14) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper()==f):
	print(round(mulher,2))
if(sexo.upper(==m))
	print(round(machoescroto,2))
	

-- ERROR:
File "XXXX", line 7
    if(sexo.upper(==m))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:48:28) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper()==f):
	print(round(mulher,2))
if(sexo.upper()==m):
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo.upper()==f):
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:48:52) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper() == F):
	print(round(mulher,2))
if(sexo.upper() == M):
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo.upper() == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:49:26) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper() == F):
	print(round(mulher,2))
else:
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo.upper() == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:49:39) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper() == F):
	print(round(mulher,2))
else:
	print(round(machoescroto,2))
	

-- EXECUTION TIME:
0.197379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/651/main.py", line 5, in <module>
    if(sexo.upper() == F):
NameError: name 'F' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:50:38) 
-- CODE:
altura=float(input("h"))
sexo=input("sekicu")
mulher=62.1*altura <= 44.7
machoescroto=72.7*altura <= 58
if(sexo.upper() == F):
	print(round(mulher,2))
if(sexo.upper() == M):
	print(round(machoescroto,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(sexo.upper() == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
